feat:增加操作日志管理的3个接口显示
